adjusted margins to correct photo spacing on portfolio

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -6,7 +6,7 @@ nav {
     margin-bottom: 50px;
 }
 
-.class {
+.row {
     margin:"16px"
 }
 
